Татальный пересбор всего (рефакторинг + список чатов)